--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     <h1>Meubel House</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad amet assumenda deserunt dignissimos dolor doloribus ea eveniet iste itaque, mollitia nisi non nostrum optio perspiciatis quis quod repudiandae sit tempora.</p>
 </body>
 </html>
