--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Meubel House</title>
+    <link rel="icon" type="image/png" href="https://www.google.com/s2/u/0/favicons?domain=css-tricks.com" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h1>Meubel House</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad amet assumenda deserunt dignissimos dolor doloribus ea eveniet iste itaque, mollitia nisi non nostrum optio perspiciatis quis quod repudiandae sit tempora.</p>
+    <header class="main-header" id="main-header">
+        <div class="logo">
+            <i class="fa-solid fa-warehouse"></i>
+        </div>
+        <nav class="header-nav">
+            <a href="#">Home</a>
+            <a href="#">Shop</a>
+            <a href="#">Blog</a>
+            <a href="#">About</a>
+            <a href="#">Contacts</a>
+        </nav>
+        <div class="header-icons">
+            <img src="images/template/icons/mdi_account-alert-outline.svg" alt="user icon">
+            <img src="images/template/icons/akar-icons_search.svg" alt="search icon">
+            <img src="images/template/icons/akar-icons_heart.svg" alt="heart icon">
+            <img src="images/template/icons/ant-design_shopping-cart-outlined.svg" alt="cart icon">
+        </div>
+    </header>
 </body>
 </html>
