markup & styling main page

--- a/index.html
+++ b/index.html
@@ -26,5 +26,32 @@
             <img src="images/template/icons/ant-design_shopping-cart-outlined.svg" alt="cart icon">
         </div>
     </header>
+
+    <section class="banner-section">
+        <div class="banner-text">
+            <h1>Rocket single seater</h1>
+            <a href="">Shop Now</a>
+        </div>
+        <div class="banner-image">
+            <img src="images/template/template_images/Rocket%20single%20seater%201.png" alt="chair">
+        </div>
+    </section>
+
+    <section class="best-items">
+        <div class="best-item best-item-1">
+            <img src="images/template/template_images/Granite%20square%20side%20table%201.png" alt="table">
+            <div class="best-item-text">
+                <h2>Side table</h2>
+                <a href="#">View More</a>
+            </div>
+        </div>
+        <div class="best-item best-item-2">
+            <img src="images/template/template_images/Cloud%20sofa%20three%20seater%20+%20ottoman_3%201.png" alt="table">
+            <div class="best-item-text">
+                <h2>Side table</h2>
+                <a href="#">View More</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
