--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+
     <header class="main-header" id="main-header">
         <div class="logo">
             <i class="fa-solid fa-warehouse"></i>
@@ -33,25 +34,70 @@
             <a href="">Shop Now</a>
         </div>
         <div class="banner-image">
-            <img src="images/template/template_images/Rocket%20single%20seater%201.png" alt="chair">
+            <img src="images/template/template_images/Rocket-single-seater-1.png" alt="Rocket-single-seater">
         </div>
     </section>
 
     <section class="best-items">
         <div class="best-item best-item-1">
-            <img src="images/template/template_images/Granite%20square%20side%20table%201.png" alt="table">
+            <img src="images/template/template_images/Granite-square-side-table-1.png" alt="Granite-square-side-table">
             <div class="best-item-text">
                 <h2>Side table</h2>
                 <a href="#">View More</a>
             </div>
         </div>
         <div class="best-item best-item-2">
-            <img src="images/template/template_images/Cloud%20sofa%20three%20seater%20+%20ottoman_3%201.png" alt="table">
+            <img src="images/template/template_images/Cloud-sofa-three-seater-+-ottoman_3-1.png" alt="Cloud-sofa-three-seater-+-ottoman">
             <div class="best-item-text">
                 <h2>Side table</h2>
                 <a href="#">View More</a>
             </div>
         </div>
     </section>
+
+    <section class="top-pics">
+        <div class="top-pics-text">
+            <h2>Top Pics For You</h2>
+            <p>Find a bright ideal to suit your taste with our great selection of suspension, floor and table lights.</p>
+        </div>
+        <div class="top-pics-items">
+            <div class="top-pics-item top-pics-item-1">
+                <img src="images/template/template_images/Trenton-modular-sofa_3-1.png" alt="Trenton-modular-sofa">
+                <p>Trenton modular sofa_3</p>
+                <span>Rs. 25,000.00</span>
+            </div>
+            <div class="top-pics-item top-pics-item-2">
+                <img src="images/template/template_images/Granite-dining-table-with-dining-chair-1.png" alt="Granite-dining-table-with-dining-chair">
+                <p>Granite dining table with dining chair</p>
+                <span>Rs. 25,000.00</span>
+            </div>
+            <div class="top-pics-item top-pics-item-3">
+                <img src="images/template/template_images/Outdoor-bar-table-and-stool-1.png" alt="Outdoor-bar-table-and-stool">
+                <p>Outdoor bar table and stool</p>
+                <span>Rs. 25,000.00</span>
+            </div>
+            <div class="top-pics-item top-pics-item-4">
+                <img src="images/template/template_images/Plain-console-with-teak-mirror-1.png" alt="Plain-console-with-teak-mirror">
+                <p>Plain console with teak mirror</p>
+                <span>Rs. 25,000.00</span>
+            </div>
+        </div>
+        <div class="top-pics-link">
+            <a href="#">View More</a>
+        </div>
+    </section>
+
+    <section class="new-arrivals">
+        <div class="new-arrivals-img">
+            <img src="images/template/template_images/Asgaard-sofa-1.png" alt="Asgaard-sofa">
+        </div>
+        <div class="new-arrivals-text">
+            <p>New Arrivals</p>
+            <h2>Asgaard sofa</h2>
+            <a href="">Order Now</a>
+        </div>
+    </section>
+
+
 </body>
 </html>
