--- a/index.html
+++ b/index.html
@@ -98,6 +98,20 @@
         </div>
     </section>
 
+    <section class="our-blogs">
+        <div class="our-blogs-heading">
+            <h2></h2>
+            <p></p>
+        </div>
+        <div class="our-blogs-items">
+            <div class="our-blog-item"></div>
+            <div class="our-blog-item"></div>
+            <div class="our-blog-item"></div>
+        </div>
+        <div class="our-blog-link">
+            <a href=""></a>
+        </div>
+    </section>
 
 </body>
 </html>
