--- a/index.html
+++ b/index.html
@@ -1,117 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Meubel House</title>
     <link rel="icon" type="image/png" href="https://www.google.com/s2/u/0/favicons?domain=css-tricks.com" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
     <header class="main-header" id="main-header">
-        <div class="logo">
-            <i class="fa-solid fa-warehouse"></i>
-        </div>
-        <nav class="header-nav">
-            <a href="#">Home</a>
-            <a href="#">Shop</a>
-            <a href="#">Blog</a>
-            <a href="#">About</a>
-            <a href="#">Contacts</a>
-        </nav>
-        <div class="header-icons">
-            <img src="images/template/icons/mdi_account-alert-outline.svg" alt="user icon">
-            <img src="images/template/icons/akar-icons_search.svg" alt="search icon">
-            <img src="images/template/icons/akar-icons_heart.svg" alt="heart icon">
-            <img src="images/template/icons/ant-design_shopping-cart-outlined.svg" alt="cart icon">
-        </div>
+      <div class="logo">
+        <i class="fa-solid fa-warehouse"></i>
+      </div>
+      <nav class="header-nav">
+        <a href="#">Home</a>
+        <a href="#">Shop</a>
+        <a href="#">Blog</a>
+        <a href="#">About</a>
+        <a href="#">Contacts</a>
+      </nav>
+      <div class="header-icons">
+        <img src="images/template/icons/mdi_account-alert-outline.svg" alt="user icon" />
+        <img src="images/template/icons/akar-icons_search.svg" alt="search icon" />
+        <img src="images/template/icons/akar-icons_heart.svg" alt="heart icon" />
+        <img src="images/template/icons/ant-design_shopping-cart-outlined.svg" alt="cart icon" />
+      </div>
     </header>
 
     <section class="banner-section">
-        <div class="banner-text">
-            <h1>Rocket single seater</h1>
-            <a href="">Shop Now</a>
-        </div>
-        <div class="banner-image">
-            <img src="images/template/template_images/Rocket-single-seater-1.png" alt="Rocket-single-seater">
-        </div>
+      <div class="banner-text">
+        <h1>Rocket single seater</h1>
+        <a href="">Shop Now</a>
+      </div>
+      <div class="banner-image">
+        <img src="images/template/template_images/Rocket-single-seater-1.png" alt="Rocket-single-seater" />
+      </div>
     </section>
 
     <section class="best-items">
-        <div class="best-item best-item-1">
-            <img src="images/template/template_images/Granite-square-side-table-1.png" alt="Granite-square-side-table">
-            <div class="best-item-text">
-                <h2>Side table</h2>
-                <a href="#">View More</a>
-            </div>
+      <div class="best-item best-item-1">
+        <img src="images/template/template_images/Granite-square-side-table-1.png" alt="Granite-square-side-table" />
+        <div class="best-item-text">
+          <h2>Side table</h2>
+          <a href="#">View More</a>
         </div>
-        <div class="best-item best-item-2">
-            <img src="images/template/template_images/Cloud-sofa-three-seater-+-ottoman_3-1.png" alt="Cloud-sofa-three-seater-+-ottoman">
-            <div class="best-item-text">
-                <h2>Side table</h2>
-                <a href="#">View More</a>
-            </div>
+      </div>
+      <div class="best-item best-item-2">
+        <img src="images/template/template_images/Cloud-sofa-three-seater-+-ottoman_3-1.png" alt="Cloud-sofa-three-seater-+-ottoman" />
+        <div class="best-item-text">
+          <h2>Side table</h2>
+          <a href="#">View More</a>
         </div>
+      </div>
     </section>
 
     <section class="top-pics">
-        <div class="top-pics-text">
-            <h2>Top Pics For You</h2>
-            <p>Find a bright ideal to suit your taste with our great selection of suspension, floor and table lights.</p>
+      <div class="top-pics-text">
+        <h2>Top Pics For You</h2>
+        <p>Find a bright ideal to suit your taste with our great selection of suspension, floor and table lights.</p>
+      </div>
+      <div class="top-pics-items">
+        <div class="top-pics-item top-pics-item-1">
+          <img src="images/template/template_images/Trenton-modular-sofa_3-1.png" alt="Trenton-modular-sofa" />
+          <p>Trenton modular sofa_3</p>
+          <span>Rs. 25,000.00</span>
         </div>
-        <div class="top-pics-items">
-            <div class="top-pics-item top-pics-item-1">
-                <img src="images/template/template_images/Trenton-modular-sofa_3-1.png" alt="Trenton-modular-sofa">
-                <p>Trenton modular sofa_3</p>
-                <span>Rs. 25,000.00</span>
-            </div>
-            <div class="top-pics-item top-pics-item-2">
-                <img src="images/template/template_images/Granite-dining-table-with-dining-chair-1.png" alt="Granite-dining-table-with-dining-chair">
-                <p>Granite dining table with dining chair</p>
-                <span>Rs. 25,000.00</span>
-            </div>
-            <div class="top-pics-item top-pics-item-3">
-                <img src="images/template/template_images/Outdoor-bar-table-and-stool-1.png" alt="Outdoor-bar-table-and-stool">
-                <p>Outdoor bar table and stool</p>
-                <span>Rs. 25,000.00</span>
-            </div>
-            <div class="top-pics-item top-pics-item-4">
-                <img src="images/template/template_images/Plain-console-with-teak-mirror-1.png" alt="Plain-console-with-teak-mirror">
-                <p>Plain console with teak mirror</p>
-                <span>Rs. 25,000.00</span>
-            </div>
+        <div class="top-pics-item top-pics-item-2">
+          <img src="images/template/template_images/Granite-dining-table-with-dining-chair-1.png" alt="Granite-dining-table-with-dining-chair" />
+          <p>Granite dining table with dining chair</p>
+          <span>Rs. 25,000.00</span>
         </div>
-        <div class="top-pics-link">
-            <a href="#">View More</a>
+        <div class="top-pics-item top-pics-item-3">
+          <img src="images/template/template_images/Outdoor-bar-table-and-stool-1.png" alt="Outdoor-bar-table-and-stool" />
+          <p>Outdoor bar table and stool</p>
+          <span>Rs. 25,000.00</span>
         </div>
+        <div class="top-pics-item top-pics-item-4">
+          <img src="images/template/template_images/Plain-console-with-teak-mirror-1.png" alt="Plain-console-with-teak-mirror" />
+          <p>Plain console with teak mirror</p>
+          <span>Rs. 25,000.00</span>
+        </div>
+      </div>
+      <div class="top-pics-link">
+        <a href="#">View More</a>
+      </div>
     </section>
 
     <section class="new-arrivals">
-        <div class="new-arrivals-img">
-            <img src="images/template/template_images/Asgaard-sofa-1.png" alt="Asgaard-sofa">
-        </div>
-        <div class="new-arrivals-text">
-            <p>New Arrivals</p>
-            <h2>Asgaard sofa</h2>
-            <a href="">Order Now</a>
-        </div>
+      <div class="new-arrivals-img">
+        <img src="images/template/template_images/Asgaard-sofa-1.png" alt="Asgaard-sofa" />
+      </div>
+      <div class="new-arrivals-text">
+        <p>New Arrivals</p>
+        <h2>Asgaard sofa</h2>
+        <a href="">Order Now</a>
+      </div>
     </section>
 
     <section class="our-blogs">
-        <div class="our-blogs-heading">
-            <h2></h2>
-            <p></p>
+      <div class="our-blogs-heading">
+        <h2>Our Blogs</h2>
+        <p>Find a bright ideal to suit your taste with our great selection</p>
+      </div>
+      <div class="our-blogs-items">
+        <div class="our-blog-item">
+          <img src="images/template/template_images/Rectangle-13.png" alt="Rectangle-13" />
+          <p>Going all-in with millennial design</p>
+          <a href="#">Read More</a>
+          <div class="our-blog-item-info">
+            <span class="reding-time"></span>
+            <span class="add-date"></span>
+          </div>
         </div>
-        <div class="our-blogs-items">
-            <div class="our-blog-item"></div>
-            <div class="our-blog-item"></div>
-            <div class="our-blog-item"></div>
+        <div class="our-blog-item">
+          <img src="images/template/template_images/Rectangle-14.png" alt="Rectangle-14" />
+          <p>Going all-in with millennial design</p>
+          <a href="#">Read More</a>
+          <div class="our-blog-item-info">
+            <span class="reding-time"></span>
+            <span class="add-date"></span>
+          </div>
         </div>
-        <div class="our-blog-link">
-            <a href=""></a>
+        <div class="our-blog-item">
+          <img src="images/template/template_images/Rectangle-15.png" alt="Rectangle-15" />
+          <p>Going all-in with millennial design</p>
+          <a href="#">Read More</a>
+          <div class="our-blog-item-info">
+            <span class="reding-time"></span>
+            <span class="add-date"></span>
+          </div>
         </div>
+      </div>
+      <div class="our-blog-link">
+        <a href="">View All Posts</a>
+      </div>
     </section>
 
-</body>
+    <section class="our-instagram">
+      <div class="our-instagram-text">
+        <h2>Our Instagram</h2>
+        <p>Follow our store on Instagram</p>
+        <a href="#">Follow Us</a>
+      </div>
+    </section>
+  </body>
 </html>
