markup & styling main page

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <a href="#">Contacts</a>
       </nav>
       <div class="header-icons">
-        <img src="images/template/icons/mdi_account-alert-outline.svg" alt="user icon" />
-        <img src="images/template/icons/akar-icons_search.svg" alt="search icon" />
-        <img src="images/template/icons/akar-icons_heart.svg" alt="heart icon" />
-        <img src="images/template/icons/ant-design_shopping-cart-outlined.svg" alt="cart icon" />
+        <a href="#"><img src="images/template/icons/mdi_account-alert-outline.svg" alt="user icon" /></a>
+        <a href="#"><img src="images/template/icons/akar-icons_search.svg" alt="search icon" /></a>
+        <a href="#"><img src="images/template/icons/akar-icons_heart.svg" alt="heart icon" /></a>
+        <a href="#"><img src="images/template/icons/ant-design_shopping-cart-outlined.svg" alt="cart icon" /></a>
       </div>
     </header>
 
@@ -108,8 +108,10 @@
           <p>Going all-in with millennial design</p>
           <a href="#">Read More</a>
           <div class="our-blog-item-info">
-            <span class="reding-time"></span>
-            <span class="add-date"></span>
+            <img src="images/template/icons/time-main.svg" alt="time-main" />
+            <span class="reding-time">5 min</span>
+            <img src="images/template/icons/date-main.svg" alt="date-main" />
+            <span class="add-date">12th Oct 2022</span>
           </div>
         </div>
         <div class="our-blog-item">
@@ -117,8 +119,10 @@
           <p>Going all-in with millennial design</p>
           <a href="#">Read More</a>
           <div class="our-blog-item-info">
-            <span class="reding-time"></span>
-            <span class="add-date"></span>
+            <img src="images/template/icons/time-main.svg" alt="time-main" />
+            <span class="reding-time">5 min</span>
+            <img src="images/template/icons/date-main.svg" alt="date-main" />
+            <span class="add-date">12th Oct 2022</span>
           </div>
         </div>
         <div class="our-blog-item">
@@ -126,8 +130,10 @@
           <p>Going all-in with millennial design</p>
           <a href="#">Read More</a>
           <div class="our-blog-item-info">
-            <span class="reding-time"></span>
-            <span class="add-date"></span>
+            <img src="images/template/icons/time-main.svg" alt="time-main" />
+            <span class="reding-time">5 min</span>
+            <img src="images/template/icons/date-main.svg" alt="date-main" />
+            <span class="add-date">12th Oct 2022</span>
           </div>
         </div>
       </div>
@@ -143,5 +149,36 @@
         <a href="#">Follow Us</a>
       </div>
     </section>
+
+    <footer class="main-footer" id="main-footer">
+      <div class="footer-top">
+        <div class="footer-address">
+          <p>400 University Drive Suite 200 Coral<br />Gables,<br />FL 33134 USA</p>
+        </div>
+        <nav class="footer-links">
+          <span>Links</span>
+          <a href="#">Shop</a>
+          <a href="#">Blog</a>
+          <a href="#">About</a>
+          <a href="#">Contacts</a>
+        </nav>
+        <nav class="footer-help">
+          <span>Help</span>
+          <a href="#">Payment Options</a>
+          <a href="#">Returns</a>
+          <a href="#">Privacy Policies</a>
+        </nav>
+        <div class="footer-newsletter">
+          <span>Newsletter</span>
+          <form class="newsletter">
+            <input type="text" placeholder="Enter Your Email Address" />
+            <input type="submit" value="SUBSCRIBE" disabled />
+          </form>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>2022 Meubel House. All rights reverved</p>
+      </div>
+    </footer>
   </body>
 </html>
