--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <header class="main-header" id="main-header">
+    <header class="main-header">
       <div class="logo">
-        <i class="fa-solid fa-warehouse"></i>
+        <a href="index.html"><img src="images/template/icons/Meubel-House_Logos-05.svg" alt="logo" /></a>
       </div>
       <nav class="header-nav">
-        <a href="#">Home</a>
-        <a href="#">Shop</a>
-        <a href="#">Blog</a>
-        <a href="#">About</a>
-        <a href="#">Contacts</a>
+        <a href="index.html">Home</a>
+        <a href="shop.html">Shop</a>
+        <a href="blog.html">Blog</a>
+        <a href="about.html">About</a>
+        <a href="contacts.html">Contacts</a>
       </nav>
       <div class="header-icons">
         <a href="#"><img src="images/template/icons/mdi_account-alert-outline.svg" alt="user icon" /></a>
@@ -157,10 +157,11 @@
         </div>
         <nav class="footer-links">
           <span>Links</span>
-          <a href="#">Shop</a>
-          <a href="#">Blog</a>
-          <a href="#">About</a>
-          <a href="#">Contacts</a>
+          <a href="index.html">Home</a>
+          <a href="shop.html">Shop</a>
+          <a href="blog.html">Blog</a>
+          <a href="about.html">About</a>
+          <a href="contacts.html">Contacts</a>
         </nav>
         <nav class="footer-help">
           <span>Help</span>
