markup & styling product manager section

--- a/shop.html
+++ b/shop.html
@@ -36,5 +36,31 @@
         <a href="shop.html">Shop</a>
       </div>
     </section>
+
+    <section class="products-manager">
+      <div class="manager-nav">
+        <div class="filter">
+          <img src="images/template/icons/filter-icon.svg" alt="filter-icon" />
+          <span>Filter</span>
+        </div>
+        <div class="view">
+          <img src="images/template/icons/tile-icon.svg" alt="tile-icon" />
+          <img src="images/template/icons/list-icon.svg" alt="list-icon" />
+        </div>
+        <div class="show-count">
+          <p class="show-count-text">Showing 1–16 of 32 results</p>
+        </div>
+      </div>
+
+      <div class="sort">
+        <label for="sort">Sort by</label>
+        <select name="sort" id="sort">
+          <option value="low-price">Дешевле</option>
+          <option value="hight-price">Дороже</option>
+          <option value="new">Более новые</option>
+          <option value="old">Более старые</option>
+        </select>
+      </div>
+    </section>
   </body>
 </html>
