markup & styling shop-products section

--- a/shop.html
+++ b/shop.html
@@ -62,5 +62,305 @@
         </select>
       </div>
     </section>
+
+    <section class="shop-products">
+      <div class="shop-prodicts-items">
+        <!-- first row -->
+        <div class="shop-products-item">
+          <div class="item-image">
+            <a href="#" class="item-image-link">
+              <img src="images/template/template_images/Trenton-modular-sofa_3-1.png" alt="Trenton-modular-sofa" />
+            </a>
+          </div>
+          <div class="item-title">
+            <a href="#">
+              <p>Trenton modular sofa_3</p>
+            </a>
+          </div>
+          <div class="item-price">
+            <a href="#">
+              <span>Rs. 25,000.00</span>
+            </a>
+          </div>
+        </div>
+
+        <div class="shop-products-item">
+          <div class="item-image">
+            <a href="#" class="item-image-link">
+              <img src="images/template/template_images/Granite-dining-table-with-dining-chair-1.png" alt="Granite-dining-table-with-dining-chair" />
+            </a>
+          </div>
+          <div class="item-title">
+            <a href="#">
+              <p>Granite dining table with dining chair</p>
+            </a>
+          </div>
+          <div class="item-price">
+            <a href="#">
+              <span>Rs. 25,000.00</span>
+            </a>
+          </div>
+        </div>
+
+        <div class="shop-products-item">
+          <div class="item-image">
+            <a href="#" class="item-image-link">
+              <img src="images/template/template_images/Outdoor-bar-table-and-stool-1.png" alt="Outdoor-bar-table-and-stool" />
+            </a>
+          </div>
+          <div class="item-title">
+            <a href="#">
+              <p>Outdoor bar table and stool</p>
+            </a>
+          </div>
+          <div class="item-price">
+            <a href="#">
+              <span>Rs. 25,000.00</span>
+            </a>
+          </div>
+        </div>
+
+        <div class="shop-products-item">
+          <div class="item-image">
+            <a href="#" class="item-image-link">
+              <img src="images/template/template_images/Plain-console-with-teak-mirror-1.png" alt="Plain-console-with-teak-mirror" />
+            </a>
+          </div>
+          <div class="item-title">
+            <a href="#">
+              <p>Plain console with teak mirror</p>
+            </a>
+          </div>
+          <div class="item-price">
+            <a href="#">
+              <span>Rs. 25,000.00</span>
+            </a>
+          </div>
+        </div>
+
+        <!-- second row -->
+        <div class="shop-products-item">
+          <div class="item-image">
+            <a href="#" class="item-image-link">
+              <img src="images/template/template_images/Grain-coffee-table-1.png" alt="Grain-coffee-table" />
+            </a>
+          </div>
+          <div class="item-title">
+            <a href="#">
+              <p>Grain coffee table</p>
+            </a>
+          </div>
+          <div class="item-price">
+            <a href="#">
+              <span>Rs. 15,000.00</span>
+            </a>
+          </div>
+        </div>
+
+        <div class="shop-products-item">
+          <div class="item-image">
+            <a href="#" class="item-image-link">
+              <img src="images/template/template_images/Kent-coffee-table-1.png" alt="Kent-coffee-table" />
+            </a>
+          </div>
+          <div class="item-title">
+            <a href="#">
+              <p>Kent coffee table</p>
+            </a>
+          </div>
+          <div class="item-price">
+            <a href="#">
+              <span>Rs. 225,000.00</span>
+            </a>
+          </div>
+        </div>
+
+        <div class="shop-products-item">
+          <div class="item-image">
+            <a href="#" class="item-image-link">
+              <img src="images/template/template_images/Round-coffee-table_color-2-1.png" alt="Round-coffee-table_color" />
+            </a>
+          </div>
+          <div class="item-title">
+            <a href="#">
+              <p>Round coffee table_color 2</p>
+            </a>
+          </div>
+          <div class="item-price">
+            <a href="#">
+              <span>Rs. 251,000.00</span>
+            </a>
+          </div>
+        </div>
+
+        <div class="shop-products-item">
+          <div class="item-image">
+            <a href="#" class="item-image-link">
+              <img src="images/template/template_images/Reclaimed-teak-coffee-table-1.png" alt="Reclaimed-teak-coffee-table" />
+            </a>
+          </div>
+          <div class="item-title">
+            <a href="#">
+              <p>Reclaimed teak coffee table</p>
+            </a>
+          </div>
+          <div class="item-price">
+            <a href="#">
+              <span>Rs. 25,200.00</span>
+            </a>
+          </div>
+        </div>
+
+        <!-- third row -->
+        <div class="shop-products-item">
+          <div class="item-image">
+            <a href="#" class="item-image-link">
+              <img src="images/template/template_images/Plain-console-1.png" alt="Plain-console" />
+            </a>
+          </div>
+          <div class="item-title">
+            <a href="#">
+              <p>Plain console</p>
+            </a>
+          </div>
+          <div class="item-price">
+            <a href="#">
+              <span>Rs. 258,200.00</span>
+            </a>
+          </div>
+        </div>
+
+        <div class="shop-products-item">
+          <div class="item-image">
+            <a href="#" class="item-image-link">
+              <img src="images/template/template_images/Reclaimed-teak-Sideboard-1.png" alt="Reclaimed-teak-Sideboard" />
+            </a>
+          </div>
+          <div class="item-title">
+            <a href="#">
+              <p>Reclaimed teak Sideboard</p>
+            </a>
+          </div>
+          <div class="item-price">
+            <a href="#">
+              <span>Rs. 20,000.00</span>
+            </a>
+          </div>
+        </div>
+
+        <div class="shop-products-item">
+          <div class="item-image">
+            <a href="#" class="item-image-link">
+              <img src="images/template/template_images/SJP_0825-1.png" alt="SJP_0825 " />
+            </a>
+          </div>
+          <div class="item-title">
+            <a href="#">
+              <p>SJP_0825</p>
+            </a>
+          </div>
+          <div class="item-price">
+            <a href="#">
+              <span>Rs. 200,000.00</span>
+            </a>
+          </div>
+        </div>
+
+        <div class="shop-products-item">
+          <div class="item-image">
+            <a href="#" class="item-image-link">
+              <img src="images/template/template_images/Bella-chair-and-table-1.png" alt="Bella chair and table" />
+            </a>
+          </div>
+          <div class="item-title">
+            <a href="#">
+              <p>Bella chair and table</p>
+            </a>
+          </div>
+          <div class="item-price">
+            <a href="#">
+              <span>Rs. 100,000.00</span>
+            </a>
+          </div>
+        </div>
+
+        <!-- fourth row -->
+        <div class="shop-products-item">
+          <div class="item-image">
+            <a href="#" class="item-image-link">
+              <img src="images/template/template_images/Granite-square-side-table-2.png" alt="Granite square side table" />
+            </a>
+          </div>
+          <div class="item-title">
+            <a href="#">
+              <p>Granite square side table</p>
+            </a>
+          </div>
+          <div class="item-price">
+            <a href="#">
+              <span>Rs. 258,800.00</span>
+            </a>
+          </div>
+        </div>
+
+        <div class="shop-products-item">
+          <div class="item-image">
+            <a href="#" class="item-image-link">
+              <img src="images/template/template_images/Asgaard-sofa-2.png" alt="Asgaard sofa" />
+            </a>
+          </div>
+          <div class="item-title">
+            <a href="#">
+              <p>Asgaard sofa</p>
+            </a>
+          </div>
+          <div class="item-price">
+            <a href="#">
+              <span>Rs. 250,000.00</span>
+            </a>
+          </div>
+        </div>
+
+        <div class="shop-products-item">
+          <div class="item-image">
+            <a href="#" class="item-image-link">
+              <img src="images/template/template_images/Maya-sofa-three-seater-1.png" alt="Maya sofa three seater" />
+            </a>
+          </div>
+          <div class="item-title">
+            <a href="#">
+              <p>Maya sofa three seater</p>
+            </a>
+          </div>
+          <div class="item-price">
+            <a href="#">
+              <span>Rs. 115,000.00</span>
+            </a>
+          </div>
+        </div>
+
+        <div class="shop-products-item">
+          <div class="item-image">
+            <a href="#" class="item-image-link">
+              <img src="images/template/template_images/Outdoor-sofa-set-1.png" alt="Outdoor sofa set" />
+            </a>
+          </div>
+          <div class="item-title">
+            <a href="#">
+              <p>Outdoor sofa set</p>
+            </a>
+          </div>
+          <div class="item-price">
+            <a href="#">
+              <span>Rs. 244,000.00</span>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="more-products-items">
+        <button class="add-products-items">More</button>
+      </div>
+    </section>
   </body>
 </html>
