markup & styling features section

--- a/shop.html
+++ b/shop.html
@@ -362,5 +362,52 @@
         <button class="add-products-items">More</button>
       </div>
     </section>
+
+    <section class="features">
+      <div class="feature">
+        <h3>Free Delivery</h3>
+        <p>For all oders over $50, consectetur adipim scing elit.</p>
+      </div>
+      <div class="feature">
+        <h3>90 Days Return</h3>
+        <p>If goods have problems, consectetur adipim scing elit.</p>
+      </div>
+      <div class="feature">
+        <h3>Secure Payment</h3>
+        <p>100% secure payment, consectetur adipim scing elit.</p>
+      </div>
+    </section>
+
+    <footer class="main-footer" id="main-footer">
+      <div class="footer-top">
+        <div class="footer-address">
+          <p>400 University Drive Suite 200 Coral<br />Gables,<br />FL 33134 USA</p>
+        </div>
+        <nav class="footer-links">
+          <span>Links</span>
+          <a href="index.html">Home</a>
+          <a href="shop.html">Shop</a>
+          <a href="blog.html">Blog</a>
+          <a href="about.html">About</a>
+          <a href="contacts.html">Contacts</a>
+        </nav>
+        <nav class="footer-help">
+          <span>Help</span>
+          <a href="#">Payment Options</a>
+          <a href="#">Returns</a>
+          <a href="#">Privacy Policies</a>
+        </nav>
+        <div class="footer-newsletter">
+          <span>Newsletter</span>
+          <form class="newsletter">
+            <input type="text" placeholder="Enter Your Email Address" />
+            <input type="submit" value="SUBSCRIBE" disabled />
+          </form>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>2022 Meubel House. All rights reverved</p>
+      </div>
+    </footer>
   </body>
 </html>
