markup & styling Single-product page

--- a/shop.html
+++ b/shop.html
@@ -68,17 +68,17 @@
         <!-- first row -->
         <div class="shop-products-item">
           <div class="item-image">
-            <a href="#" class="item-image-link">
+            <a href="single-product.html" class="item-image-link">
               <img src="images/template/template_images/Trenton-modular-sofa_3-1.png" alt="Trenton-modular-sofa" />
             </a>
           </div>
           <div class="item-title">
-            <a href="#">
+            <a href="single-product.html">
               <p>Trenton modular sofa_3</p>
             </a>
           </div>
           <div class="item-price">
-            <a href="#">
+            <a href="single-product.html">
               <span>Rs. 25,000.00</span>
             </a>
           </div>
@@ -86,17 +86,17 @@
 
         <div class="shop-products-item">
           <div class="item-image">
-            <a href="#" class="item-image-link">
+            <a href="single-product.html" class="item-image-link">
               <img src="images/template/template_images/Granite-dining-table-with-dining-chair-1.png" alt="Granite-dining-table-with-dining-chair" />
             </a>
           </div>
           <div class="item-title">
-            <a href="#">
+            <a href="single-product.html">
               <p>Granite dining table with dining chair</p>
             </a>
           </div>
           <div class="item-price">
-            <a href="#">
+            <a href="single-product.html">
               <span>Rs. 25,000.00</span>
             </a>
           </div>
@@ -104,17 +104,17 @@
 
         <div class="shop-products-item">
           <div class="item-image">
-            <a href="#" class="item-image-link">
+            <a href="single-product.html" class="item-image-link">
               <img src="images/template/template_images/Outdoor-bar-table-and-stool-1.png" alt="Outdoor-bar-table-and-stool" />
             </a>
           </div>
           <div class="item-title">
-            <a href="#">
+            <a href="single-product.html">
               <p>Outdoor bar table and stool</p>
             </a>
           </div>
           <div class="item-price">
-            <a href="#">
+            <a href="single-product.html">
               <span>Rs. 25,000.00</span>
             </a>
           </div>
@@ -122,17 +122,17 @@
 
         <div class="shop-products-item">
           <div class="item-image">
-            <a href="#" class="item-image-link">
+            <a href="single-product.html" class="item-image-link">
               <img src="images/template/template_images/Plain-console-with-teak-mirror-1.png" alt="Plain-console-with-teak-mirror" />
             </a>
           </div>
           <div class="item-title">
-            <a href="#">
+            <a href="single-product.html">
               <p>Plain console with teak mirror</p>
             </a>
           </div>
           <div class="item-price">
-            <a href="#">
+            <a href="single-product.html">
               <span>Rs. 25,000.00</span>
             </a>
           </div>
@@ -141,17 +141,17 @@
         <!-- second row -->
         <div class="shop-products-item">
           <div class="item-image">
-            <a href="#" class="item-image-link">
+            <a href="single-product.html" class="item-image-link">
               <img src="images/template/template_images/Grain-coffee-table-1.png" alt="Grain-coffee-table" />
             </a>
           </div>
           <div class="item-title">
-            <a href="#">
+            <a href="single-product.html">
               <p>Grain coffee table</p>
             </a>
           </div>
           <div class="item-price">
-            <a href="#">
+            <a href="single-product.html">
               <span>Rs. 15,000.00</span>
             </a>
           </div>
@@ -159,17 +159,17 @@
 
         <div class="shop-products-item">
           <div class="item-image">
-            <a href="#" class="item-image-link">
+            <a href="single-product.html" class="item-image-link">
               <img src="images/template/template_images/Kent-coffee-table-1.png" alt="Kent-coffee-table" />
             </a>
           </div>
           <div class="item-title">
-            <a href="#">
+            <a href="single-product.html">
               <p>Kent coffee table</p>
             </a>
           </div>
           <div class="item-price">
-            <a href="#">
+            <a href="single-product.html">
               <span>Rs. 225,000.00</span>
             </a>
           </div>
@@ -177,17 +177,17 @@
 
         <div class="shop-products-item">
           <div class="item-image">
-            <a href="#" class="item-image-link">
+            <a href="single-product.html" class="item-image-link">
               <img src="images/template/template_images/Round-coffee-table_color-2-1.png" alt="Round-coffee-table_color" />
             </a>
           </div>
           <div class="item-title">
-            <a href="#">
+            <a href="single-product.html">
               <p>Round coffee table_color 2</p>
             </a>
           </div>
           <div class="item-price">
-            <a href="#">
+            <a href="single-product.html">
               <span>Rs. 251,000.00</span>
             </a>
           </div>
@@ -195,17 +195,17 @@
 
         <div class="shop-products-item">
           <div class="item-image">
-            <a href="#" class="item-image-link">
+            <a href="single-product.html" class="item-image-link">
               <img src="images/template/template_images/Reclaimed-teak-coffee-table-1.png" alt="Reclaimed-teak-coffee-table" />
             </a>
           </div>
           <div class="item-title">
-            <a href="#">
+            <a href="single-product.html">
               <p>Reclaimed teak coffee table</p>
             </a>
           </div>
           <div class="item-price">
-            <a href="#">
+            <a href="single-product.html">
               <span>Rs. 25,200.00</span>
             </a>
           </div>
@@ -214,17 +214,17 @@
         <!-- third row -->
         <div class="shop-products-item">
           <div class="item-image">
-            <a href="#" class="item-image-link">
+            <a href="single-product.html" class="item-image-link">
               <img src="images/template/template_images/Plain-console-1.png" alt="Plain-console" />
             </a>
           </div>
           <div class="item-title">
-            <a href="#">
+            <a href="single-product.html">
               <p>Plain console</p>
             </a>
           </div>
           <div class="item-price">
-            <a href="#">
+            <a href="single-product.html">
               <span>Rs. 258,200.00</span>
             </a>
           </div>
@@ -232,17 +232,17 @@
 
         <div class="shop-products-item">
           <div class="item-image">
-            <a href="#" class="item-image-link">
+            <a href="single-product.html" class="item-image-link">
               <img src="images/template/template_images/Reclaimed-teak-Sideboard-1.png" alt="Reclaimed-teak-Sideboard" />
             </a>
           </div>
           <div class="item-title">
-            <a href="#">
+            <a href="single-product.html">
               <p>Reclaimed teak Sideboard</p>
             </a>
           </div>
           <div class="item-price">
-            <a href="#">
+            <a href="single-product.html">
               <span>Rs. 20,000.00</span>
             </a>
           </div>
@@ -250,17 +250,17 @@
 
         <div class="shop-products-item">
           <div class="item-image">
-            <a href="#" class="item-image-link">
+            <a href="single-product.html" class="item-image-link">
               <img src="images/template/template_images/SJP_0825-1.png" alt="SJP_0825 " />
             </a>
           </div>
           <div class="item-title">
-            <a href="#">
+            <a href="single-product.html">
               <p>SJP_0825</p>
             </a>
           </div>
           <div class="item-price">
-            <a href="#">
+            <a href="single-product.html">
               <span>Rs. 200,000.00</span>
             </a>
           </div>
@@ -268,17 +268,17 @@
 
         <div class="shop-products-item">
           <div class="item-image">
-            <a href="#" class="item-image-link">
+            <a href="single-product.html" class="item-image-link">
               <img src="images/template/template_images/Bella-chair-and-table-1.png" alt="Bella chair and table" />
             </a>
           </div>
           <div class="item-title">
-            <a href="#">
+            <a href="single-product.html">
               <p>Bella chair and table</p>
             </a>
           </div>
           <div class="item-price">
-            <a href="#">
+            <a href="single-product.html">
               <span>Rs. 100,000.00</span>
             </a>
           </div>
@@ -287,17 +287,17 @@
         <!-- fourth row -->
         <div class="shop-products-item">
           <div class="item-image">
-            <a href="#" class="item-image-link">
+            <a href="single-product.html" class="item-image-link">
               <img src="images/template/template_images/Granite-square-side-table-2.png" alt="Granite square side table" />
             </a>
           </div>
           <div class="item-title">
-            <a href="#">
+            <a href="single-product.html">
               <p>Granite square side table</p>
             </a>
           </div>
           <div class="item-price">
-            <a href="#">
+            <a href="single-product.html">
               <span>Rs. 258,800.00</span>
             </a>
           </div>
@@ -305,17 +305,17 @@
 
         <div class="shop-products-item">
           <div class="item-image">
-            <a href="#" class="item-image-link">
+            <a href="single-product.html" class="item-image-link">
               <img src="images/template/template_images/Asgaard-sofa-2.png" alt="Asgaard sofa" />
             </a>
           </div>
           <div class="item-title">
-            <a href="#">
+            <a href="single-product.html">
               <p>Asgaard sofa</p>
             </a>
           </div>
           <div class="item-price">
-            <a href="#">
+            <a href="single-product.html">
               <span>Rs. 250,000.00</span>
             </a>
           </div>
@@ -323,17 +323,17 @@
 
         <div class="shop-products-item">
           <div class="item-image">
-            <a href="#" class="item-image-link">
+            <a href="single-product.html" class="item-image-link">
               <img src="images/template/template_images/Maya-sofa-three-seater-1.png" alt="Maya sofa three seater" />
             </a>
           </div>
           <div class="item-title">
-            <a href="#">
+            <a href="single-product.html">
               <p>Maya sofa three seater</p>
             </a>
           </div>
           <div class="item-price">
-            <a href="#">
+            <a href="single-product.html">
               <span>Rs. 115,000.00</span>
             </a>
           </div>
@@ -341,17 +341,17 @@
 
         <div class="shop-products-item">
           <div class="item-image">
-            <a href="#" class="item-image-link">
+            <a href="single-product.html" class="item-image-link">
               <img src="images/template/template_images/Outdoor-sofa-set-1.png" alt="Outdoor sofa set" />
             </a>
           </div>
           <div class="item-title">
-            <a href="#">
+            <a href="single-product.html">
               <p>Outdoor sofa set</p>
             </a>
           </div>
           <div class="item-price">
-            <a href="#">
+            <a href="single-product.html">
               <span>Rs. 244,000.00</span>
             </a>
           </div>
@@ -359,7 +359,7 @@
       </div>
 
       <div class="more-products-items">
-        <button class="add-products-items">More</button>
+        <button class="add-products-items">View More</button>
       </div>
     </section>
 
