markup & styling single-product page

--- a/single-product.html
+++ b/single-product.html
@@ -45,7 +45,7 @@
             <img src="images/template/template_images/Stuart-sofa-1.png" alt="Stuart-sofa-1.png" />
           </div>
           <div class="main-picture">
-            <img src="images/template/template_images/Asgaard-sof-3.png" alt="" />
+            <img src="images/template/template_images/Asgaard-sof-3.png" alt="Asgaard-sof-3" />
           </div>
         </div>
         <div class="single-product-main-properties">
@@ -89,10 +89,87 @@
             </div>
             <input class="input-add-to-cart" type="submit" value="Add To Cart" />
           </form>
+          <div class="additional-info">
+            <div class="additional-info-key">SKU</div>
+            <div class="additional-info-value">:&nbsp;&nbsp; SS001</div>
+            <div class="additional-info-key">Category</div>
+            <div class="additional-info-value">:&nbsp;&nbsp; Sofas</div>
+            <div class="additional-info-key">Tags</div>
+            <div class="additional-info-value">:&nbsp;&nbsp; Sofa, Chair, Home, Shop</div>
+            <div class="additional-info-key">Share</div>
+            <div class="additional-info-value">
+              <div class="social-icons">
+                <span>:</span>
+                <a href="#"><img src="images/template/icons/social-facebook.svg" alt="social-facebook" /></a>
+                <a href="#"><img src="images/template/icons/social-in.svg" alt="social-in" /></a>
+                <a href="#"><img src="images/template/icons/social-twitter.svg" alt="social-twitter" /></a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="single-product-additional-info">доп инфо</div>
+      <div class="single-product-tabbed-info">
+        <div class="tabbed-headers">
+          <h3 class="tabbed-header tabbed-header-active">Description</h3>
+          <h3 class="tabbed-header">Additional information</h3>
+          <h3 class="tabbed-header">Reviews [5]</h3>
+        </div>
+        <div class="tabbed-content tab-content-active tab-description">
+          <p class="tabbed-content-text">
+            Embodying the raw, wayward spirit of rock ‘n’ roll, the Kilburn portable active stereo speaker takes the unmistakable look and sound of Marshall, unplugs the chords, and takes the show on
+            the road.
+          </p>
+          <p class="tabbed-content-text">
+            Weighing in under 7 pounds, the Kilburn is a lightweight piece of vintage styled engineering. Setting the bar as one of the loudest speakers in its class, the Kilburn is a compact,
+            stout-hearted hero with a well-balanced audio which boasts a clear midrange and extended highs for a sound that is both articulate and pronounced. The analogue knobs allow you to fine tune
+            the controls to your personal preferences while the guitar-influenced leather strap enables easy and stylish travel.
+          </p>
+          <div class="tabbed-content-gallery">
+            <div class="tabbed-content-gallery-img">
+              <img src="images/template/template_images/Cloud-sofa-three seater-ottoman_2-1.png" alt="Cloud-sofa-three seater-ottoman_2-1" />
+            </div>
+            <div class="tabbed-content-gallery-img">
+              <img src="images/template/template_images/Cloud-sofa-three-seater-ottoman_1-1.png" alt="Cloud-sofa-three-seater-ottoman_1-1" />
+            </div>
+          </div>
+        </div>
+        <div class="tabbed-content tab-additional-info"></div>
+        <div class="tabbed-content tab-reviews"></div>
+      </div>
     </section>
+
+    <!--  -->
+    <section class="related-products">
+      <div class="related-products-text">
+        <h2>Relared Products</h2>
+      </div>
+      <div class="related-products-items">
+        <div class="related-products-item">
+          <img src="images/template/template_images/Trenton-modular-sofa_3-1.png" alt="Trenton-modular-sofa" />
+          <p>Trenton modular sofa_3</p>
+          <span>Rs. 25,000.00</span>
+        </div>
+        <div class="related-products-item">
+          <img src="images/template/template_images/Granite-dining-table-with-dining-chair-1.png" alt="Granite-dining-table-with-dining-chair" />
+          <p>Granite dining table with dining chair</p>
+          <span>Rs. 25,000.00</span>
+        </div>
+        <div class="related-products-item">
+          <img src="images/template/template_images/Outdoor-bar-table-and-stool-1.png" alt="Outdoor-bar-table-and-stool" />
+          <p>Outdoor bar table and stool</p>
+          <span>Rs. 25,000.00</span>
+        </div>
+        <div class="related-products-item">
+          <img src="images/template/template_images/Plain-console-with-teak-mirror-1.png" alt="Plain-console-with-teak-mirror" />
+          <p>Plain console with teak mirror</p>
+          <span>Rs. 25,000.00</span>
+        </div>
+      </div>
+      <div class="related-products-link">
+        <a href="#">View More</a>
+      </div>
+    </section>
+    <!--  -->
 
     <footer class="main-footer" id="main-footer">
       <div class="footer-top">
