markup & styling my-account page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="contacts.html">Contacts</a>
       </nav>
       <div class="header-icons">
-        <a href="#"><img src="images/template/icons/mdi_account-alert-outline.svg" alt="user icon" /></a>
+        <a href="my-account.html"><img src="images/template/icons/mdi_account-alert-outline.svg" alt="user icon" /></a>
         <a href="#"><img src="images/template/icons/akar-icons_search.svg" alt="search icon" /></a>
         <a href="#"><img src="images/template/icons/akar-icons_heart.svg" alt="heart icon" /></a>
         <a href="#"><img src="images/template/icons/ant-design_shopping-cart-outlined.svg" alt="cart icon" /></a>
@@ -30,7 +30,7 @@
     <section class="banner-section">
       <div class="banner-text">
         <h1>Rocket single seater</h1>
-        <a href="">Shop Now</a>
+        <a href="shop.html">Shop Now</a>
       </div>
       <div class="banner-image">
         <img src="images/template/template_images/Rocket-single-seater-1.png" alt="Rocket-single-seater" />
