--- a/shop.html
+++ b/shop.html
@@ -20,7 +20,7 @@
         <a href="contacts.html">Contacts</a>
       </nav>
       <div class="header-icons">
-        <a href="#"><img src="images/template/icons/mdi_account-alert-outline.svg" alt="user icon" /></a>
+        <a href="my-account.html"><img src="images/template/icons/mdi_account-alert-outline.svg" alt="user icon" /></a>
         <a href="#"><img src="images/template/icons/akar-icons_search.svg" alt="search icon" /></a>
         <a href="#"><img src="images/template/icons/akar-icons_heart.svg" alt="heart icon" /></a>
         <a href="#"><img src="images/template/icons/ant-design_shopping-cart-outlined.svg" alt="cart icon" /></a>
