markup & styling my-account page & cart

--- a/single-product.html
+++ b/single-product.html
@@ -23,7 +23,7 @@
         <a href="my-account.html"><img src="images/template/icons/mdi_account-alert-outline.svg" alt="user icon" /></a>
         <a href="#"><img src="images/template/icons/akar-icons_search.svg" alt="search icon" /></a>
         <a href="#"><img src="images/template/icons/akar-icons_heart.svg" alt="heart icon" /></a>
-        <a href="#"><img src="images/template/icons/ant-design_shopping-cart-outlined.svg" alt="cart icon" /></a>
+        <a href="cart.html"><img src="images/template/icons/ant-design_shopping-cart-outlined.svg" alt="cart icon" /></a>
       </div>
     </header>
 
@@ -42,7 +42,7 @@
             <img src="images/template/template_images/Maya-sofa-three-seater-1-prev.png" alt="Maya-sofa-three-seater" />
             <img src="images/template/template_images/Outdoor-sofa-set_2-1.png" alt="Outdoor-sofa-set_2-1" />
             <img src="images/template/template_images/Outdoor-sofa-set-2.png" alt="Outdoor-sofa-set-2" />
-            <img src="images/template/template_images/Stuart-sofa-1.png" alt="Stuart-sofa-1.png" />
+            <img src="images/template/template_images/Stuart-sofa-1.png" alt="Stuart-sofa-1" />
           </div>
           <div class="main-picture">
             <img src="images/template/template_images/Asgaard-sof-3.png" alt="Asgaard-sof-3" />
