--- a/cart.html
+++ b/cart.html
@@ -29,44 +29,53 @@
 
     <section class="second-banner">
       <img src="images/template/icons/Meubel-House_Logos-05.svg" alt="logo" />
-      <h1>My Account</h1>
+      <h1>Cart</h1>
       <div class="banner-breadcrumbs">
         <a href="index.html">Home</a>
         <img src="images/template/icons/breadcrumbs-separator.svg" alt="breadcrumbs-separator" />
-        <a href="shop.html">My Account</a>
+        <a href="cart.html">Cart</a>
       </div>
     </section>
 
-    <section class="my-account">
-      <form class="form-log-in">
-        <h2>Log In</h2>
-        <div class="input-text-field log-in-email">
-          <label for="email">Email address</label>
-          <input type="email" id="email" />
+    <section class="cart">
+      <div class="cart-products">
+        <div class="cart-table-head">
+          <span class="product">Product</span>
+          <span class="price">Price</span>
+          <span class="quantity">Quantity</span>
+          <span class="subtotal">Subtotal</span>
         </div>
-        <div class="input-text-field log-in-password">
-          <label for="password">Password</label>
-          <input type="password" id="password" />
+        <div class="cart-table-body">
+          <img class="product-img" src="images/template/template_images/Stuart-sofa-1.png" alt="Stuart-sofa-1" />
+          <span class="product">Asgaard sofa</span>
+          <span class="price">Rs. 250,000.00</span>
+          <input class="quantity" type="text" value="1" />
+          <span class="subtotal">Rs. 250,000.00</span>
+          <img class="delete-product" src="images/template/icons/trash-can.svg" alt="trash-can" />
         </div>
-        <div class="log-in-submit">
-          <input class="submit" type="submit" value="Log In" />
-          <a href="#"><span class="lost-password">Lost Your Password?</span></a>
+        <div class="cart-table-body">
+          <img class="product-img" src="images/template/template_images/Outdoor-sofa-set-2.png" alt="Outdoor-sofa-set-2" />
+          <span class="product">Outdoor sofa set</span>
+          <span class="price">Rs. 180,000.00</span>
+          <input class="quantity" type="text" value="1" />
+          <span class="subtotal">Rs. 180,000.00</span>
+          <img class="delete-product" src="images/template/icons/trash-can.svg" alt="trash-can" />
         </div>
-      </form>
-      <form class="form-register">
-        <h2>Register</h2>
-        <div class="input-text-field register-email">
-          <label for="email">Email address</label>
-          <input type="email" id="email" />
+      </div>
+      <div class="cart-totals">
+        <h2>Cart Totals</h2>
+        <div class="subtotal">
+          <span>Subtotal</span>
+          <span>Rs. 430,000.00</span>
         </div>
-        <div class="register-explanation">
-          <p>A link to set a new password will be sent to your email address.</p>
-          <p>Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our privacy policy..</p>
+        <div class="total">
+          <span>Total</span>
+          <span>Rs. 430,000.00</span>
         </div>
-        <div class="register-submit">
-          <input class="submit" type="submit" value="Register" />
+        <div class="check-out">
+          <a href="#">Check Out</a>
         </div>
-      </form>
+      </div>
     </section>
 
     <section class="features">
